# conda-encouragement

./: README.md  pyproject.toml
conda_encouragement/: conflicting_packages.py  plugin.py
