[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "conda-encouragement"
description = "Nice to check in and have a little chat before doing some work 💪"
readme = "README.md"
authors = [
  { name = "Sophia Castellarin", email = "scastellarin@openteams.com" },
]
license = "MIT"
license-files = [
  "LICENSE",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
]

[project.urls]
homepage = "https://github.com/soapy1/conda-encouragement"

[project.entry-points.conda]
conda-pypi = "conda_encouragement.plugin"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
# must match project.dependencies (sans python and conda)
python = ">=3.10"
conda = ">=26.5"
agno = ">=2.6.19,<3"
openai = ">=2.44.0,<3"

[tool.pixi.pypi-dependencies]
"conda-encouragement" = { path  = ".", editable = true }

[tool.ruff]
line-length = 99

[tool.hatch.build.targets.wheel]
packages = ["conda_encouragement"]
